--- a/app/src/main/res/layout/activity_view_account.xml
+++ b/app/src/main/res/layout/activity_view_account.xml
@@ -123,13 +123,13 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/save_btn"
+        android:id="@+id/update_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="@dimen/_10sdp"
         android:background="@drawable/bg_rect_btn"
-        android:text="Save"
+        android:text="Update"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/_16sdp"
