--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,6 +30,7 @@
             android:textSize="@dimen/_20sdp" />
 
         <Button
+            android:id="@+id/add_new_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
