--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,6 +9,7 @@
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="52dp"
+        app:theme="@style/AppTheme.Toolbar"
         android:background="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
