--- a/app/src/main/res/layout/item_search_list.xml
+++ b/app/src/main/res/layout/item_search_list.xml
@@ -3,20 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/item_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/hint_color"
-        android:gravity="center_horizontal"
-        android:padding="@dimen/_10sdp">
+        android:background="@color/hint_color">
 
         <TextView
             android:id="@+id/acc_name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/_40sdp"
             android:text="Account"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/_15sdp" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/delete_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:paddingBottom="@dimen/_10sdp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="@dimen/_10sdp"
+            android:text="X"
+            android:textStyle="bold" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
